[package]
name = "r-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.12.1"
async-trait = "0.1.72"
derive_builder = "0.12.0"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["alloc"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
